# servertanksgame

./: .directory  .gitignore  CMakeLists.txt  README.md  Tanks  main.cpp  makefile  servertanks.creator.user.4.8-pre1  servertanks.files  unused_makefile
assets/maps/: map1.txt  map2.txt
cmake/: FindSDL2.cmake  FindSDL2_net.cmake
include/: .Client.h.kate-swp  BasePacket.h  Client.h  HearbeatPacket.h  HeartbeatPacket.h  JoinRequestPacket.h  JoinResponsePacket.h  Main.h  NetManager.h  Room.h  Timer.h  UniversalPacket.h
include/ConnectionUtils/: TcpConnection.h  UdpConnection.h
include/Engine/: EngineManager.h  Map.h  MpManager.h  _Scene.h
include/Models/: Bullet.h  Client.h  PowerUp.h  Wall.h
include/Packets/: BasePacket.h  CurrentPositionPacket.h  EventPacket.h  GameInfoPacket.h  HeartbeatPacket.h  HostChangedPacket.h  InfoRequestPacket.h  JoinRequestPacket.h  JoinResponsePacket.h  PlayerDisconnectedPacket.h  PlayerJoinedPacket.h  PowerUpPacket.h  ScoreInfoPacket.h  StartGameRequestPacket.h  SyncPacket.h  UniversalPacket.h
src/: .main.cpp.kate-swp  BasePacket.cpp  Client.cpp  HearbeatPacket.cpp  HeartbeatPacket.cpp  JoinResponsePacket.cpp  Main.cpp  NetManager.cpp  PlayerDisconnectedPacket.cpp  Room.cpp  Timer.cpp  UniversalPacket.cpp  main.cpp
src/ConnectionUtils/: TcpConnection.cpp  UdpConnection.cpp
src/Engine/: EngineManager.cpp  Map.cpp  MpManager.cpp  _Scene.cpp
src/Models/: Bullet.cpp  Client.cpp  PowerUp.cpp  Wall.cpp
src/Packets/: BasePacket.cpp  CurrentPositionPacket.cpp  EventPacket.cpp  HeartbeatPacket.cpp  InfoRequestPacket.cpp  JoinRequestPacket.cpp  SyncPacket.cpp  (+8 more)
(+8 files in other folders)
